--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "creem": "0.3.36",
     "framer-motion": "^11.18.2",
     "lucide-react": "^0.436.0",
-    "next": "14.2.6",
+    "next": "^14.2.33",
     "next-themes": "^0.4.6",
     "next-view-transitions": "^0.3.0",
     "prisma": "^5.20.0",
@@ -46,7 +46,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
-    "eslint-config-next": "14.2.6",
+    "eslint-config-next": "^16.0.6",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
